Revert "chore: fix line-break in footer email"
This reverts commit 60b247e3bc781215532d0cbc60c816f5aa0819bd.

--- a/src/styles/components/richtext.css
+++ b/src/styles/components/richtext.css
@@ -15,6 +15,7 @@
   }
 
   & a {
+    overflow-wrap: anywhere;
     color: var(--text-color);
 
     &:hover,
